--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-gesture-handler": "~1.3.0",
     "react-native-reanimated": "~1.2.0",
     "react-native-screens": "~1.0.0-alpha.23",
-    "react-native-safe-area-context": "~0.3.6"
+    "react-native-safe-area-context": "~0.3.6",
+    "react-native-maps": "~0.25.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
