--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
-    "react-native-web": "^0.11.7",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-image-placeholder": "^1.0.14",
+    "react-native-maps": "~0.25.0",
     "react-native-reanimated": "~1.2.0",
-    "react-native-screens": "~1.0.0-alpha.23",
     "react-native-safe-area-context": "~0.3.6",
-    "react-native-maps": "~0.25.0"
+    "react-native-screens": "~1.0.0-alpha.23",
+    "react-native-web": "^0.11.7"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
