--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-native-reanimated": "~1.2.0",
     "react-native-safe-area-context": "~0.3.6",
     "react-native-screens": "~1.0.0-alpha.23",
-    "react-native-web": "^0.11.7"
+    "react-native-web": "^0.11.7",
+    "expo-permissions": "~7.0.0",
+    "expo-location": "~7.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
