--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@react-navigation/core": "^5.0.0-alpha.25",
     "@react-navigation/native": "^5.0.0-alpha.16",
     "@react-navigation/stack": "^5.0.0-alpha.38",
+    "axios": "^0.19.0",
     "expo": "^35.0.0",
+    "expo-location": "~7.0.0",
+    "expo-permissions": "~7.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
@@ -23,9 +26,7 @@
     "react-native-reanimated": "~1.2.0",
     "react-native-safe-area-context": "~0.3.6",
     "react-native-screens": "~1.0.0-alpha.23",
-    "react-native-web": "^0.11.7",
-    "expo-permissions": "~7.0.0",
-    "expo-location": "~7.0.0"
+    "react-native-web": "^0.11.7"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
